@@ -40,25 +40,6 @@
         />
 
     <browser:viewlet
-        name="ftw.mobile.simple.button.template.js"
-        for="*"
-        manager="plone.app.layout.viewlets.interfaces.IHtmlHeadLinks"
-        template="templates/list.html.pt"
-        permission="zope2.View"
-        layer="ftw.mobile.interfaces.IMobileLayer"
-        />
-
-
-    <browser:viewlet
-        name="ftw.mobile.navigation.template.js"
-        for="*"
-        manager="plone.app.layout.viewlets.interfaces.IHtmlHeadLinks"
-        template="templates/navigation.html.pt"
-        permission="zope2.View"
-        layer="ftw.mobile.interfaces.IMobileLayer"
-        />
-
-    <browser:viewlet
         name="ftw.mobile.buttons.viewlet"
         for="*"
         class=".buttons_viewlet.MobileButtonViewlet"
