@@ -11,3 +11,6 @@
     <div id="ftw-mobile-menu"></div>
     <div id="ftw-mobile-menu-overlay">
 </div>
+
+<tal:HANDLEBARS_LIST_TEMPLATE replace="structure view/handlebars_list_html" />
+<tal:HANDLEBARS_LIST_TEMPLATE replace="structure view/handlebars_navigation_html" />
